# URDF-Parser

./: CMakeLists.txt  LICENSE  README.md  four_bar.urdf  mini_cheetah.urdf  mini_cheetah.xacro  mini_cheetah_leg.urdf  mini_cheetah_test.urdf  mini_cheetah_test.xacro  mit_humanoid.urdf  mit_humanoid.xacro  mit_humanoid_leg.urdf  mit_humanoid_leg.xacro  planar_leg_linkage.urdf  revolute_rotor_chain.urdf  six_bar.urdf
cmake/: brl_urdfConfig.cmake.in
examples/: mit_humanoid_leg.urdf  mit_humanoid_leg.xacro
include/custom_urdf/: cluster.h  color.h  constraint.h  constraint_joint.h  exception.h  joint.h  lifo_map.h  link.h  model.h  pose.h  urdf_parser.h
src/: constraint.cpp  constraint_joint.cpp  joint.cpp  link.cpp  model.cpp  pose.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
tests/: testCluster.cpp  testExporter.cpp  testLink.cpp  testParser.cpp
